# mbsecure_prod

./: .gitignore  CNAME  README.md  index.html  pyproject.toml  pytest.ini  run_tests.py
about/: index.html
assets/css/: main.css  prism-fix.css
assets/js/: blog-init.js  blog-meta.js  contact.js  footer.js  header.js  main.js  nav.js  site-config.js  util.js
blog/: feed.xml  index.html
blog/2018/03/: volatility-proxies-and-network-traffic.html
blog/2018/03/volatility-proxies-and-network-traffic/: index.html
blog/2018/06/: hunting-with-ja3.html
blog/2018/06/hunting-with-ja3/: index.html
blog/2018/12/: tahiti-threat-hunting-methodology.html
blog/2018/12/tahiti-threat-hunting-methodology/: index.html
blog/2018/7/: bypass-client-side-generated-http-security-headers.html
blog/2018/7/bypass-client-side-generated-http-security-headers/: index.html
blog/2018/9/: opsec-for-blue-teams-part-1.html  opsec-for-blue-teams-part-2.html  opsec-for-blue-teams-part-3.html
blog/2018/9/opsec-for-blue-teams-part-1/: index.html
blog/2019/10/: how-to-integrate-eql-into-your-tooling.html
blog/2019/12/: kql-cheat-sheet.html
blog/2019/5/: dettact-mapping-your-blue-team-to-mitre-attack.html
blog/2020/4/: the-sources-for-hunts-and-how-to-prioritise.html
blog/page/2/: index.html
contact/: index.html
scripts/: deploy.sh  download-sarif.sh
services/: index.html
tests/: README.md  __init__.py  conftest.py  test_accessibility.py  test_blog_interactions.py  test_browser.py  test_performance.py  test_responsive.py  test_static.py  test_visual.py
(+6 files in other folders)
